modified:   4 files 	modified:   projectCode/login.php 	modified:   projectCode/sellerPage.css 	modified:   projectCode/sellerPage.html 	modified:   projectCode/sellerPage.php

--- a/projectCode/sellerPage.css
+++ b/projectCode/sellerPage.css
@@ -105,7 +105,11 @@ input, select, textarea {
     width: 100%;
     text-align: center;
 }
-
+.photo-preview img {
+    max-width: 100px;
+    margin-right: 10px;
+    border-radius: 8px;
+}
 .footer {
     background: #2f64ad;
     color: white;
