--- a/projectCode/item.css
+++ b/projectCode/item.css
@@ -177,7 +177,7 @@ a:hover {
     text-align: center;
     padding: 10px;
     font-size: 12px;
-    position: absolute;
+    position: static;
     bottom: 0;
     width: 100%;
 }
