--- a/projectCode/buyerPage.css
+++ b/projectCode/buyerPage.css
@@ -25,13 +25,13 @@ body {
 /* SIDEBAR */
 .sidebar {
     width: 10%;
-    background-color: #d8e0f3;
+    background-color: #e0e0e0;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-right: 1px solid #000;
     border-top: 0;
-    overflow-y: auto;
+    
 }
 
 .logo {
@@ -50,10 +50,11 @@ img {
 }
 
 .search-options {
-    padding: 10px;
+    padding: 0px;
     background: #e0e0e0;
     text-align: center;
-    width: 90%;
+    width: 100%;
+    
 }
 
 /* MAIN CONTENT */
@@ -73,8 +74,9 @@ img {
 }
 
 #price-slider {
+    padding-left: 3%;
     position: relative;
-    width: 100%;
+    width: 94%;
     margin-top: 5px;
 }
 
@@ -115,6 +117,10 @@ img {
     flex-direction: column;
     gap: 20px;
     justify-content: flex-start;
+}
+
+.sort-dropdown,.id-dropdown,.time-box,.postcode-box{
+    width: 95%;
 }
 
 .search-results > div {
