--- a/projectCode/sellerPage.css
+++ b/projectCode/sellerPage.css
@@ -120,3 +120,9 @@ input, select, textarea {
     bottom: 0;
     width: 100%;
 }
+
+.error {
+    display: none;
+    color: red;
+    font-size: 0.9em;
+}
