--- a/projectCode/item.css
+++ b/projectCode/item.css
@@ -78,7 +78,7 @@ p {
 
 .image-block {
     position: relative;
-    height: 400px;
+    height: auto;
     display: flex;
     justify-content: center;
     overflow: hidden;
