--- a/projectCode/sellerPage.css
+++ b/projectCode/sellerPage.css
@@ -47,6 +47,22 @@ body {
     padding-right: 3%;
 }
 
+.nav-button {
+    background-color: #ccc;
+    padding: 10px;
+    border: none;
+    color: black;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.nav-button:hover {
+    background-color: #999;
+}
+
 @media screen and (max-width: 768px) {
     .header {
         flex-direction: column;
