Updated index to show bid as well as starting price 	modified:   projectCode/fetchItems.php 	modified:   projectCode/index.css

--- a/projectCode/index.css
+++ b/projectCode/index.css
@@ -178,7 +178,7 @@ body {
     text-align: center;
     padding: 10px;
     font-size: 12px;
-    position: absolute;
+    position: sticky;
     bottom: 0;
     width: 100%;
 }
