--- a/projectCode/listingPage.css
+++ b/projectCode/listingPage.css
@@ -18,7 +18,7 @@ body {
     font-size: 24px;
     font-weight: bold;
     display: flex;
-    justify-content: space-between; /* Distributes space between items */
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
     z-index: 1000;
@@ -27,7 +27,7 @@ body {
 .header-left,
 .header-center,
 .header-right {
-    flex: 1; /* Makes each section take equal space */
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
