--- a/projectCode/index.css
+++ b/projectCode/index.css
@@ -82,9 +82,9 @@ body {
 
 .sidebar {
     position: fixed;
-    top: 10px;
-    left: -250px;
-    width: 250px;
+    top: 30px;
+    left: -240px;
+    width: 240px;
     height: 100%;
     background: #0056b3;
     padding-top: 20px;
@@ -100,9 +100,9 @@ body {
 .sidebar a {
     display: block;
     color: white;
-    padding: 14px 20px;
+    padding: 2vh 1vw;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 2.2vh;
     transition: background 0.3s ease;
 }
 
