--- a/projectCode/index.css
+++ b/projectCode/index.css
@@ -67,7 +67,7 @@ body {
     padding: 14px;
     background: #0056b3;
     color: white;
-    font-size: 16px;
+    font-size: 2.2vh;
     text-align: center;
     border: none;
     border-radius: 0;
